# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: github-actions-demo.yml  github-actions.yml
gendiff/: temp_name.py
gendiff/scripts/: gendiff.py
